src/test/deca/context/invalid/resultats/test_instanceof_invalid_leftoperand-cont.res
./src/test/deca/context/invalid/test_instanceof_invalid_leftoperand.deca:26:4: The left operand is not of type class 
